// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with a TextInput 1`] = `
<Form
  doc={Object {}}
  name="World"
  setDoc={[Function]}
>
  <pure(TextInput) />
</Form>
`;

exports[`renders without crashing 1`] = `
<Form
  doc={Object {}}
  name="World"
  setDoc={[Function]}
/>
`;
